log
Fri, Mar 28, 2025 11:31:30 AM: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
25021aa
Fri, Mar 28, 2025 11:56:52 AM: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  6|4
total_score: 25/70
8795cf0
Fri, Mar 28, 2025 12:05:10 PM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
1fbfb45
Fri, Mar 28, 2025  1:53:36 PM: 
 list.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:101:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
list.c:99:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3993399
Fri, Mar 28, 2025  1:59:52 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
5c687a2
